# task_manager

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: docker-image.yml  ruff-lint.yml  tests.yml
app/: __init__.py  main.py  models.py
tests/: __init__.py  test_create.py  test_delete.py  test_retrieve.py  test_update.py
